--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -95,6 +95,12 @@
             <artifactId>spring-dotenv</artifactId>
             <version>2.5.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.6.0</version>
+        </dependency>
+
 
     </dependencies>
 
