--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,21 +3,26 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/skillsync
-    username: ${env.SPRING_DATASOURCE_USERNAME}
-    password: ${env.SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:h2:mem:skillsync
+    username: sa
+    password: 
+    driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        dialect: org.hibernate.dialect.H2Dialect
+
+  h2:
+    console:
+      enabled: true
 
 
 jwt:
-  secret: ${env.JWT_SECRET}
-  expiration: ${env.JWT_EXPIRATION}
+  secret: ${env.JWT_SECRET:mySecretKey123456789012345678901234567890}
+  expiration: ${env.JWT_EXPIRATION:86400000}
 
 
