fix the refreshing issue: when regfreshing items dissaper

--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,14 +3,14 @@ server:
 
 spring:
   datasource:
-    url: jdbc:h2:mem:skillsync
-    username:
+    url: jdbc:h2:file:./data/skillsync
+    username: sa
     password: 
     driver-class-name: org.h2.Driver
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
