--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,124 @@
-# Node 
-frontend/node_modules
-frontend/dist
+# Node.js / Next.js
+frontend/node_modules/
+frontend/.next/
+frontend/out/
+frontend/dist/
+frontend/build/
+frontend/.vercel/
+frontend/package-lock.json
+frontend/yarn.lock
+frontend/.env*.local
+frontend/.env.local
+frontend/.env.development.local
+frontend/.env.test.local
+frontend/.env.production.local
 
-# Java 
-backend/target
-backend/.idea
+# Java / Spring Boot
+backend/target/
+backend/.idea/
 backend/.classpath
 backend/.project
-*.iml
+backend/.settings/
+backend/*.iml
+backend/.gradle/
+backend/gradle/
+backend/wrapper/
+backend/build/
+backend/out/
 
-# General 
-.env 
+# Database files (H2)
+backend/data/
+*.db
+*.mv.db
+*.trace.db
+*.h2.db
+
+# Logs
 *.log
-.DS_store
+logs/
+backend/logs/
+frontend/logs/
+
+# Environment variables
+.env
+.env.*
+!.env.example
+
+# IDE / Editor files
 .vscode/
+.idea/
+*.swp
+*.swo
+*~
+.DS_Store
+Thumbs.db
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.backup
+*.orig
+
+# Coverage reports
+coverage/
+*.lcov
+.nyc_output/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# Next.js build output
+.next
+
+# Nuxt.js build / generate output
+.nuxt
+dist
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
