--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -25,4 +25,10 @@ jwt:
   secret: ${env.JWT_SECRET:mySecretKey123456789012345678901234567890}
   expiration: ${env.JWT_EXPIRATION:604800000}
 
+ai:
+  openai:
+    api-key: ${env.OPENAI_API_KEY:}
+    base-url: ${env.OPENAI_BASE_URL:https://api.openai.com/v1}
+    model: ${env.OPENAI_MODEL:gpt-3.5-turbo}
+
 
