--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -41,7 +42,9 @@
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.3.7",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.15",
+    "tw-animate-css": "^1.4.0",
+    "typescript": "^5",
+    "vite": "^7.1.11"
   }
 }
