--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -25,6 +25,13 @@ jwt:
 server:
   port: ${PORT:8080}
 
+# AI Configuration
+ai:
+  openai:
+    api-key: ${OPENAI_API_KEY:}
+    base-url: ${OPENAI_BASE_URL:https://api.openai.com/v1}
+    model: ${OPENAI_MODEL:gpt-3.5-turbo}
+
 # Logging Configuration
 logging:
   level:
