--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -19,7 +19,7 @@ spring:
 # JWT Configuration
 jwt:
   secret: ${JWT_SECRET:your-super-secret-jwt-key-change-this-in-production}
-  expiration: ${JWT_EXPIRATION:3600000} # 1 hour in milliseconds
+  expiration: ${JWT_EXPIRATION:604800000} # 7 days in milliseconds (temporary)
 
 # Server Configuration
 server:
