Add Sentry error monitoring with secure configuration

--- a/backend/env.example
+++ b/backend/env.example
@@ -10,3 +10,7 @@ JWT_SECRET=CHANGE_THIS_JWT_SECRET_IN_PRODUCTION_USE_LONG_RANDOM_STRING
 
 # Spring Profile
 SPRING_PROFILES_ACTIVE=prod
+
+# Sentry Error Monitoring (Optional)
+SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id
+SENTRY_AUTH_TOKEN=your-sentry-auth-token-here
